--- a/aboutteacher.html
+++ b/aboutteacher.html
@@ -77,8 +77,8 @@
         <!-- header section ends -->
 
         <section class="heading">
-            <h3>about us</h3>
-            <p><a href="home.html">home >></a> about</p>
+            <h3>The Teachers</h3>
+            <p><a href="home.html">home >></a> about teachers</p>
         </section>
 
         <!-- about section starts  -->
