--- a/aboutteam.html
+++ b/aboutteam.html
@@ -77,8 +77,8 @@
         <!-- header section ends -->
 
         <section class="heading">
-            <h3>about us</h3>
-            <p><a href="home.html">home >></a> about</p>
+            <h3>The Team</h3>
+            <p><a href="home.html">home >></a> about team</p>
         </section>
 
         <!-- about section starts  -->
