--- a/home.html
+++ b/home.html
@@ -91,7 +91,7 @@
                     "Education is the most powerful weapon which you can use to change the world" - Nelson Mandela
                 </p>
                 <a href="php/register.html" class="btn">Register</a>
-                <a href="php/login0.html" class="btn">Login</a>
+                <a href="php/login.html" class="btn">Login</a>
             </div>
         </section>
 
@@ -100,27 +100,27 @@
         <!-- categories section starts  -->
 
         <section class="category">
-            <a href="#" class="box">
+            <a href="subjects/maths.html" class="box">
                 <img src="images/category-1.png" alt="" />
                 <h3>Mathematics</h3>
             </a>
 
-            <a href="#" class="box">
+            <a href="subjects/addmaths.html" class="box">
                 <img src="images/category-2.png" alt="" />
                 <h3>Additional Mathematics</h3>
             </a>
 
-            <a href="#" class="box">
+            <a href="subjects/physics.html" class="box">
                 <img src="images/category-3.png" alt="" />
                 <h3>Physics</h3>
             </a>
 
-            <a href="#" class="box">
+            <a href="subjects/chemistry.html" class="box">
                 <img src="images/category-4.png" alt="" />
                 <h3>Chemistry</h3>
             </a>
 
-            <a href="#" class="box">
+            <a href="subjects/biology.html" class="box">
                 <img src="images/category-5.png" alt="" />
                 <h3>Biology</h3>
             </a>
