--- a/subjects/addmaths.html
+++ b/subjects/addmaths.html
@@ -73,8 +73,8 @@
         <!-- header section ends -->
 
         <section class="heading">
-            <h3>course 02</h3>
-            <p><a href="home.html">home >></a> course-2</p>
+            <h3>Additional Mathematics</h3>
+            <p><a href="../home.html">home >></a> add maths</p>
         </section>
 
         <!-- course-2 section starts  -->
