--- a/subjects/maths.html
+++ b/subjects/maths.html
@@ -71,10 +71,9 @@
             </nav>
         </header>
         <!-- Header ends -->
-
         <section class="heading">
-            <h3>course 02</h3>
-            <p><a href="home.html">home >></a> course-2</p>
+            <h3>Mathematics</h3>
+            <p><a href="../home.html">home >></a> mathematics</p>
         </section>
 
         <!-- course-2 section starts  -->
