--- a/subjects/physics.html
+++ b/subjects/physics.html
@@ -71,10 +71,9 @@
             </nav>
         </header>
         <!-- header section ends -->
-
         <section class="heading">
-            <h3>course 03</h3>
-            <p><a href="home.html">home >></a> course-3</p>
+            <h3>Physics</h3>
+            <p><a href="../home.html">home >></a> physics</p>
         </section>
 
         <!-- course-3 section starts  -->
