Updated navigation bar, added team, tutor section

--- a/aboutteam.html
+++ b/aboutteam.html
@@ -35,7 +35,7 @@
                                 <a href="aboutteam.html">The Team</a>
                             </li>
                             <li>
-                                <a href="aboutteacher.html">The Teachers</a>
+                                <a href="abouttutor.html">The Tutors</a>
                             </li>
                         </ul>
                     </li>
@@ -63,44 +63,86 @@
                             </li>
                         </ul>
                     </li>
-                    <li>
-                        <a href="#">Pages +</a>
-                        <ul>
-                            <li><a href="teachers.html">Teachers</a></li>
-                            <li><a href="blog.html">Blogs</a></li>
-                        </ul>
-                    </li>
                     <li><a href="contact.html">Contact</a></li>
                 </ul>
             </nav>
         </header>
-        <!-- header section ends -->
+        <!-- Header ends -->
 
         <section class="heading">
-            <h3>The Team</h3>
-            <p><a href="home.html">home >></a> about team</p>
+            <h3>The Team Members</h3>
+            <p><a href="home.html">home >></a> team</p>
         </section>
 
-        <!-- about section starts  -->
+        <!-- tutors section starts  -->
 
-        <section class="about">
-            <div class="image">
-                <img src="images/about-img.png" alt="" />
+        <section class="team">
+            <div class="box">
+                <div class="imageTeam">
+                    <img src="images/PicKhai.jpg" alt="Khairul" />
+                    <div class="share">
+                        <a href="#" class="fab fa-facebook-f"></a>
+                        <a href="#" class="fab fa-twitter"></a>
+                        <a href="#" class="fab fa-instagram"></a>
+                        <a href="#" class="fab fa-linkedin"></a>
+                    </div>
+                </div>
+                <div class="contentTeam">
+                    <h3>Khairul Haziq</h3>
+                    <span></span>
+                </div>
             </div>
 
-            <div class="content">
-                <h3>I will stay with you until you pass your exam.</h3>
-                <p>
-                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Id
-                    ducimus at maiores repellat aut debitis aliquam esse,
-                    quisquam nobis laborum velit voluptate excepturi obcaecati
-                    dignissimos omnis. Fugiat hic quod nobis?
-                </p>
-                <a href="#" class="btn">learn more</a>
+            <div class="box">
+                <div class="imageTeam">
+                    <img src="images/PicRith.jpg" alt="Harith" />
+                    <div class="share">
+                        <a href="#" class="fab fa-facebook-f"></a>
+                        <a href="#" class="fab fa-twitter"></a>
+                        <a href="#" class="fab fa-instagram"></a>
+                        <a href="#" class="fab fa-linkedin"></a>
+                    </div>
+                </div>
+                <div class="contentTeam">
+                    <h3>Harith Iqbal</h3>
+                    <span></span>
+                </div>
+            </div>
+
+            <div class="box">
+                <div class="imageTeam">
+                    <img src="images/PicSyahril.jpeg" alt="Syahril" />
+                    <div class="share">
+                        <a href="#" class="fab fa-facebook-f"></a>
+                        <a href="#" class="fab fa-twitter"></a>
+                        <a href="#" class="fab fa-instagram"></a>
+                        <a href="#" class="fab fa-linkedin"></a>
+                    </div>
+                </div>
+                <div class="contentTeam">
+                    <h3>Syahril Rumizam</h3>
+                    <span></span>
+                </div>
+            </div>
+
+            <div class="box">
+                <div class="imageTeam">
+                    <img src="images/PicDib.jpeg" alt="Adib" />
+                    <div class="share">
+                        <a href="#" class="fab fa-facebook-f"></a>
+                        <a href="#" class="fab fa-twitter"></a>
+                        <a href="#" class="fab fa-instagram"></a>
+                        <a href="#" class="fab fa-linkedin"></a>
+                    </div>
+                </div>
+                <div class="contentTeam">
+                    <h3>Adib Asyraaf</h3>
+                    <span></span>
+                </div>
             </div>
         </section>
 
-        <!-- about section ends -->
+        <!-- team section ends -->
 
         <!-- footer section starts  -->
 
@@ -123,8 +165,8 @@
                     <a href="course-3.html">
                         <i class="fas fa-arrow-right"></i> course-3
                     </a>
-                    <a href="teachers.html">
-                        <i class="fas fa-arrow-right"></i> teachers
+                    <a href="team.html">
+                        <i class="fas fa-arrow-right"></i> team
                     </a>
                     <a href="blog.html">
                         <i class="fas fa-arrow-right"></i> blog
