--- a/abouttutor.html
+++ b/abouttutor.html
@@ -35,7 +35,7 @@
                                 <a href="aboutteam.html">The Team</a>
                             </li>
                             <li>
-                                <a href="aboutteacher.html">The Teachers</a>
+                                <a href="abouttutor.html">The Tutors</a>
                             </li>
                         </ul>
                     </li>
@@ -63,13 +63,6 @@
                             </li>
                         </ul>
                     </li>
-                    <li>
-                        <a href="#">Pages +</a>
-                        <ul>
-                            <li><a href="teachers.html">Teachers</a></li>
-                            <li><a href="blog.html">Blogs</a></li>
-                        </ul>
-                    </li>
                     <li><a href="contact.html">Contact</a></li>
                 </ul>
             </nav>
@@ -77,175 +70,117 @@
         <!-- Header ends -->
 
         <section class="heading">
-            <h3>our blogs</h3>
-            <p><a href="home.html">home >></a> blogs</p>
+            <h3>The Tutors</h3>
+            <p><a href="home.html">home >></a> tutors</p>
         </section>
 
-        <!-- blog section starts  -->
+        <!-- tutors section starts  -->
 
-        <section class="blog">
+        <section class="team">
             <div class="box">
                 <div class="image">
-                    <img src="images/blog-1.jpg" alt="" />
+                    <img src="images/teacher-1.png" alt="" />
+                    <div class="share">
+                        <a href="#" class="fab fa-facebook-f"></a>
+                        <a href="#" class="fab fa-twitter"></a>
+                        <a href="#" class="fab fa-instagram"></a>
+                        <a href="#" class="fab fa-linkedin"></a>
+                    </div>
                 </div>
                 <div class="content">
-                    <div class="icons">
-                        <a href="#">
-                            <i class="fas fa-clock"></i> 21st may, 2021
-                        </a>
-                        <a href="#"> <i class="fas fa-user"></i> by admin </a>
-                    </div>
-                    <h3>learning is what makes you perfect</h3>
-                    <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                        Facere, quaerat!
-                    </p>
-                    <a href="#" class="btn">read more</a>
+                    <h3>john deo</h3>
+                    <span>web designer</span>
                 </div>
             </div>
 
             <div class="box">
                 <div class="image">
-                    <img src="images/blog-2.jpg" alt="" />
+                    <img src="images/teacher-2.png" alt="" />
+                    <div class="share">
+                        <a href="#" class="fab fa-facebook-f"></a>
+                        <a href="#" class="fab fa-twitter"></a>
+                        <a href="#" class="fab fa-instagram"></a>
+                        <a href="#" class="fab fa-linkedin"></a>
+                    </div>
                 </div>
                 <div class="content">
-                    <div class="icons">
-                        <a href="#">
-                            <i class="fas fa-clock"></i> 21st may, 2021
-                        </a>
-                        <a href="#"> <i class="fas fa-user"></i> by admin </a>
-                    </div>
-                    <h3>learning is what makes you perfect</h3>
-                    <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                        Facere, quaerat!
-                    </p>
-                    <a href="#" class="btn">read more</a>
+                    <h3>john deo</h3>
+                    <span>web designer</span>
                 </div>
             </div>
 
             <div class="box">
                 <div class="image">
-                    <img src="images/blog-3.jpg" alt="" />
+                    <img src="images/teacher-3.png" alt="" />
+                    <div class="share">
+                        <a href="#" class="fab fa-facebook-f"></a>
+                        <a href="#" class="fab fa-twitter"></a>
+                        <a href="#" class="fab fa-instagram"></a>
+                        <a href="#" class="fab fa-linkedin"></a>
+                    </div>
                 </div>
                 <div class="content">
-                    <div class="icons">
-                        <a href="#">
-                            <i class="fas fa-clock"></i> 21st may, 2021
-                        </a>
-                        <a href="#"> <i class="fas fa-user"></i> by admin </a>
-                    </div>
-                    <h3>learning is what makes you perfect</h3>
-                    <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                        Facere, quaerat!
-                    </p>
-                    <a href="#" class="btn">read more</a>
+                    <h3>john deo</h3>
+                    <span>web designer</span>
                 </div>
             </div>
 
             <div class="box">
                 <div class="image">
-                    <img src="images/blog-4.jpg" alt="" />
+                    <img src="images/teacher-4.png" alt="" />
+                    <div class="share">
+                        <a href="#" class="fab fa-facebook-f"></a>
+                        <a href="#" class="fab fa-twitter"></a>
+                        <a href="#" class="fab fa-instagram"></a>
+                        <a href="#" class="fab fa-linkedin"></a>
+                    </div>
                 </div>
                 <div class="content">
-                    <div class="icons">
-                        <a href="#">
-                            <i class="fas fa-clock"></i> 21st may, 2021
-                        </a>
-                        <a href="#"> <i class="fas fa-user"></i> by admin </a>
-                    </div>
-                    <h3>learning is what makes you perfect</h3>
-                    <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                        Facere, quaerat!
-                    </p>
-                    <a href="#" class="btn">read more</a>
+                    <h3>john deo</h3>
+                    <span>web designer</span>
                 </div>
             </div>
 
             <div class="box">
                 <div class="image">
-                    <img src="images/blog-5.jpg" alt="" />
+                    <img src="images/teacher-5.png" alt="" />
+                    <div class="share">
+                        <a href="#" class="fab fa-facebook-f"></a>
+                        <a href="#" class="fab fa-twitter"></a>
+                        <a href="#" class="fab fa-instagram"></a>
+                        <a href="#" class="fab fa-linkedin"></a>
+                    </div>
                 </div>
                 <div class="content">
-                    <div class="icons">
-                        <a href="#">
-                            <i class="fas fa-clock"></i> 21st may, 2021
-                        </a>
-                        <a href="#"> <i class="fas fa-user"></i> by admin </a>
-                    </div>
-                    <h3>learning is what makes you perfect</h3>
-                    <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                        Facere, quaerat!
-                    </p>
-                    <a href="#" class="btn">read more</a>
-                </div>
-            </div>
-
-            <div class="box">
-                <div class="image">
-                    <img src="images/blog-6.jpg" alt="" />
-                </div>
-                <div class="content">
-                    <div class="icons">
-                        <a href="#">
-                            <i class="fas fa-clock"></i> 21st may, 2021
-                        </a>
-                        <a href="#"> <i class="fas fa-user"></i> by admin </a>
-                    </div>
-                    <h3>learning is what makes you perfect</h3>
-                    <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                        Facere, quaerat!
-                    </p>
-                    <a href="#" class="btn">read more</a>
-                </div>
-            </div>
-
-            <div class="box">
-                <div class="image">
-                    <img src="images/blog-7.jpg" alt="" />
-                </div>
-                <div class="content">
-                    <div class="icons">
-                        <a href="#">
-                            <i class="fas fa-clock"></i> 21st may, 2021
-                        </a>
-                        <a href="#"> <i class="fas fa-user"></i> by admin </a>
-                    </div>
-                    <h3>learning is what makes you perfect</h3>
-                    <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                        Facere, quaerat!
-                    </p>
-                    <a href="#" class="btn">read more</a>
-                </div>
-            </div>
-
-            <div class="box">
-                <div class="image">
-                    <img src="images/blog-8.jpg" alt="" />
-                </div>
-                <div class="content">
-                    <div class="icons">
-                        <a href="#">
-                            <i class="fas fa-clock"></i> 21st may, 2021
-                        </a>
-                        <a href="#"> <i class="fas fa-user"></i> by admin </a>
-                    </div>
-                    <h3>learning is what makes you perfect</h3>
-                    <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                        Facere, quaerat!
-                    </p>
-                    <a href="#" class="btn">read more</a>
+                    <h3>john deo</h3>
+                    <span>web designer</span>
                 </div>
             </div>
         </section>
 
-        <!-- blog section ends -->
+        <!-- team section ends -->
+
+        <!-- about section starts  -->
+
+        <section class="about">
+            <div class="image">
+                <img src="images/about-img.png" alt="" />
+            </div>
+
+            <div class="content">
+                <h3>We will stay with you until you pass your exam.</h3>
+                <p>
+                    <b>
+                        "One child, one teacher, one book and one pen can change
+                        the world."
+                    </b>
+                    - Malala Yousafzai
+                </p>
+                <a href="php/register.html" class="btn">Register Now!</a>
+            </div>
+        </section>
+
+        <!-- about section ends -->
 
         <!-- footer section starts  -->
 
@@ -268,8 +203,8 @@
                     <a href="course-3.html">
                         <i class="fas fa-arrow-right"></i> course-3
                     </a>
-                    <a href="teachers.html">
-                        <i class="fas fa-arrow-right"></i> teachers
+                    <a href="team.html">
+                        <i class="fas fa-arrow-right"></i> team
                     </a>
                     <a href="blog.html">
                         <i class="fas fa-arrow-right"></i> blog
