--- a/contact.html
+++ b/contact.html
@@ -35,7 +35,7 @@
                                 <a href="aboutteam.html">The Team</a>
                             </li>
                             <li>
-                                <a href="aboutteacher.html">The Teachers</a>
+                                <a href="abouttutor.html">The Teachers</a>
                             </li>
                         </ul>
                     </li>
@@ -61,13 +61,6 @@
                             <li>
                                 <a href="subjects/biology.html">Biology</a>
                             </li>
-                        </ul>
-                    </li>
-                    <li>
-                        <a href="#">Pages +</a>
-                        <ul>
-                            <li><a href="teachers.html">Teachers</a></li>
-                            <li><a href="blog.html">Blogs</a></li>
                         </ul>
                     </li>
                     <li><a href="contact.html">Contact</a></li>
