--- a/home.html
+++ b/home.html
@@ -36,7 +36,7 @@
                                 <a href="aboutteam.html">The Team</a>
                             </li>
                             <li>
-                                <a href="aboutteacher.html">The Teachers</a>
+                                <a href="abouttutor.html">The Teachers</a>
                             </li>
                         </ul>
                     </li>
@@ -64,13 +64,6 @@
                             </li>
                         </ul>
                     </li>
-                    <li>
-                        <a href="#">Pages +</a>
-                        <ul>
-                            <li><a href="teachers.html">Teachers</a></li>
-                            <li><a href="blog.html">Blogs</a></li>
-                        </ul>
-                    </li>
                     <li><a href="contact.html">Contact</a></li>
                 </ul>
             </nav>
@@ -88,7 +81,7 @@
                 <h3>Smart <br>E-Tuition Information</h3>
                 <p>
                     Let Us Score! will assist you in achieving the greatest possible results in your <i>Sijil Pelajaran Malaysia.</i> Join now and embark on a fantastic journey with us! <br>
-                    "Education is the most powerful weapon which you can use to change the world" - Nelson Mandela
+                    "Education is the most powerful weapon which you can use to change the world." - Nelson Mandela
                 </p>
                 <a href="php/register.html" class="btn">Register</a>
                 <a href="php/login.html" class="btn">Login</a>
