--- a/abouttutor.html
+++ b/abouttutor.html
@@ -170,10 +170,12 @@
             <div class="content">
                 <h3>We will stay with you until you pass your exam.</h3>
                 <p>
-                    <b>
-                        "One child, one teacher, one book and one pen can change
-                        the world."
-                    </b>
+                    <cite>
+                        <b>
+                            "One child, one teacher, one book and one pen can
+                            change the world."
+                        </b>
+                    </cite>
                     - Malala Yousafzai
                 </p>
                 <a href="php/register.html" class="btn">Register Now!</a>
