--- a/home.html
+++ b/home.html
@@ -80,8 +80,8 @@
                 <img src="images/logocircle.png"></img>
                 <h3>Smart <br>E-Tuition Information</h3>
                 <p>
-                    Let Us Score! will assist you in achieving the greatest possible results in your <i>Sijil Pelajaran Malaysia.</i> Join now and embark on a fantastic journey with us! <br>
-                    "Education is the most powerful weapon which you can use to change the world." - Nelson Mandela
+                    Let Us Score! will assist you in achieving the greatest possible results in your <i>Sijil Pelajaran Malaysia (SPM).</i> Join now and embark on a fantastic journey with us! <br>
+                    <cite><b>"Education is the most powerful weapon which you can use to change the world."</b></cite> - Nelson Mandela
                 </p>
                 <a href="php/register.html" class="btn">Register</a>
                 <a href="php/login.html" class="btn">Login</a>
