--- a/aboutteam.html
+++ b/aboutteam.html
@@ -89,7 +89,7 @@
                 </div>
                 <div class="contentTeam">
                     <h3>Khairul Haziq</h3>
-                    <span></span>
+                    <span>Member 1</span>
                 </div>
             </div>
 
@@ -105,7 +105,7 @@
                 </div>
                 <div class="contentTeam">
                     <h3>Harith Iqbal</h3>
-                    <span></span>
+                    <span>Member 2</span>
                 </div>
             </div>
 
@@ -121,7 +121,7 @@
                 </div>
                 <div class="contentTeam">
                     <h3>Syahril Rumizam</h3>
-                    <span></span>
+                    <span>Member 3</span>
                 </div>
             </div>
 
@@ -137,7 +137,7 @@
                 </div>
                 <div class="contentTeam">
                     <h3>Adib Asyraaf</h3>
-                    <span></span>
+                    <span>Member 4</span>
                 </div>
             </div>
         </section>
