--- a/dashboard/pages/forms/feedback.html
+++ b/dashboard/pages/forms/feedback.html
@@ -145,22 +145,21 @@
                   </p>
                 -->
                   <form class="forms-sample">
-                    <div class="form-group">
-                       <label>Class</label>
-                        <select  placeholder="Upload Payment Proof" class="js-example-basic-single w-100 " >
-                          
-                          <option value="A">Class A</option>
-                          <option value="B">Class B</option>
-                        </select>
-                    </div>
+                    
                     <div class="form-group">
                       <label>Subject</label>
                         <select class="js-example-basic-multiple w-100" multiple="multiple">
-                          <option value="AL">Mathematics</option>
-                          <option value="WY">Additional Mathematics</option>
-                          <option value="AM">Physics</option>
-                          <option value="CA">Chemistry</option>
-                          <option value="RU">Biology</option>
+                          <option value="AL">Mathematics ( Saturday, 8:00 a.m. - 9:00 a.m.)</option>
+                          <option value="AX">Mathematics ( Sunday, 8:00 a.m. - 9:00 a.m.)</option>
+                          <option value="WY">Additional Mathematics ( Saturday, 8:00 a.m. - 9:00 a.m.)</option>
+                          <option value="WN">Additional Mathematics ( Sunday, 8:00 a.m. - 9:00 a.m.)</option>
+
+                          <option value="AM">Physics ( Saturday, 8:00 a.m. - 9:00 a.m.)</option>
+                          <option value="AN">Physics ( Saturday, 8:00 a.m. - 9:00 a.m.)</option>
+                          <option value="CA">Chemistry ( Saturday, 8:00 a.m. - 9:00 a.m.)</option>
+                          <option value="CX">Chemistry ( Sunday, 8:00 a.m. - 9:00 a.m.)</option>
+                          <option value="RU">Biology ( Saturday, 8:00 a.m. - 9:00 a.m.)</option>
+                          <option value="RX">Biology ( Sunday, 8:00 a.m. - 9:00 a.m.)</option>
                         </select>
                     </div>
                     <div class="form-group">
@@ -173,7 +172,7 @@
                    </div>
 
                     <div class="form-group">
-                      <label for="exampleTextarea1">Reference</label>
+                      <label for="exampleTextarea1">Feedback</label>
                       <textarea class="form-control" id="exampleTextarea1" rows="4"></textarea>
                     </div>
                     <button type="submit" class="btn btn-primary me-2">Submit</button>
