Added wrong password checker

--- a/home.html
+++ b/home.html
@@ -84,7 +84,7 @@
                     <cite><b>"Education is the most powerful weapon which you can use to change the world."</b></cite> - Nelson Mandela
                 </p>
                 <a href="php/register.html" class="btn">Register</a>
-                <a href="php/login.html" class="btn">Login</a>
+                <a href="php/login.php" class="btn">Login</a>
             </div>
         </section>
 
