--- a/php/register.html
+++ b/php/register.html
@@ -20,7 +20,7 @@
             </a>
         </div>
         <div class="container">
-            <header>Registration</header>
+            <header>Registration Page</header>
             <form name="registerForm" method="post" action="register.php">
                 <div class="details personal">
                     <span class="title">Account Details</span>
@@ -115,7 +115,7 @@
             </form>
             <span class="text"
                 >Already a member?
-                <a href="login.html">Login Now</a>
+                <a href="login.php">Login Now</a>
             </span>
         </div>
 
