--- a/home.html
+++ b/home.html
@@ -1,5 +1,3 @@
-</body>
-</html>
 <!DOCTYPE html>
 <html lang="en">
     <head>
@@ -77,11 +75,20 @@
             </div>
 
             <div class="content">
-                <img src="images/logocircle.png"></img>
-                <h3>Smart <br>E-Tuition Information</h3>
+                <img src="images/logocircle.png" id="logoMain" />
+                <h3>Smart <br />E-Tuition Information</h3>
                 <p>
-                    Let Us Score! will assist you in achieving the greatest possible results in your <i>Sijil Pelajaran Malaysia (SPM).</i> Join now and embark on a fantastic journey with us! <br>
-                    <cite><b>"Education is the most powerful weapon which you can use to change the world."</b></cite> - Nelson Mandela
+                    Let Us Score! will assist you in achieving the greatest
+                    possible results in your
+                    <i>Sijil Pelajaran Malaysia (SPM).</i> Join now and embark
+                    on a fantastic journey with us! <br />
+                    <cite>
+                        <b>
+                            "Education is the most powerful weapon which you can
+                            use to change the world."
+                        </b>
+                    </cite>
+                    - Nelson Mandela
                 </p>
                 <a href="php/register.html" class="btn">Register</a>
                 <a href="php/login.php" class="btn">Login</a>
