--- a/home.html
+++ b/home.html
@@ -75,7 +75,10 @@
             </div>
 
             <div class="content">
-                <img src="images/logocircle.png" id="logoMain" />
+                <div class="image">
+                    <img src="images/logocircle.png" />
+                </div>
+
                 <h3>Smart <br />E-Tuition Information</h3>
                 <p>
                     Let Us Score! will assist you in achieving the greatest
