--- a/dashboard/pages/tables/basic-table copy.html
+++ b/dashboard/pages/tables/basic-table copy.html
@@ -46,8 +46,8 @@
       <div class="navbar-menu-wrapper d-flex align-items-top"> 
         <ul class="navbar-nav">
           <li class="nav-item font-weight-semibold d-none d-lg-block ms-0">
-            <h1 class="welcome-text">Good Morning, <span class="text-black fw-bold">Nama orang</span></h1>
-            <h3 class="welcome-sub-text">Let Us Score Dashboard </h3>
+            
+            <h3 class="welcome-text">Let Us Score Dashboard </h3>
           </li>
         </ul>
         <ul class="navbar-nav ms-auto">
