--- a/dashboard/student.html
+++ b/dashboard/student.html
@@ -46,7 +46,7 @@
       <div class="navbar-menu-wrapper d-flex align-items-top"> 
         <ul class="navbar-nav">
           <li class="nav-item font-weight-semibold d-none d-lg-block ms-0">
-            <h1 class="welcome-text">Good Morning, <span class="text-black fw-bold">Nama Orang</span></h1>
+            <h1 class="welcome-text">Good Morning, <span class="text-black fw-bold">Student</span></h1>
             <h3 class="welcome-sub-text">Let Us Score Dashboard </h3>
           </li>
         </ul>
