--- a/dashboard/tutor.html
+++ b/dashboard/tutor.html
@@ -46,7 +46,7 @@
       <div class="navbar-menu-wrapper d-flex align-items-top"> 
         <ul class="navbar-nav">
           <li class="nav-item font-weight-semibold d-none d-lg-block ms-0">
-            <h1 class="welcome-text">Good Morning, <span class="text-black fw-bold">Nama Orang</span></h1>
+            <h1 class="welcome-text">Good Morning, <span class="text-black fw-bold">Tutor</span></h1>
             <h3 class="welcome-sub-text">Let Us Score Dashboard </h3>
           </li>
         </ul>
@@ -202,39 +202,34 @@
                                   <p class="mb-0">20 finished, 5 remaining</p>
                                 </div>
                                 <ul class="bullet-line-list">
+                                  
                                   <li>
                                     <div class="d-flex justify-content-between">
-                                      <div><span class="text-light-green">Ben Tossell</span> assign you a task</div>
-                                      <p>Just now</p>
-                                    </div>
-                                  </li>
-                                  <li>
-                                    <div class="d-flex justify-content-between">
-                                      <div><span class="text-light-green">Oliver Noah</span> assign you a task</div>
+                                      <div><span class="text-light-green"> </span> assign you a task</div>
                                       <p>1h</p>
                                     </div>
                                   </li>
                                   <li>
                                     <div class="d-flex justify-content-between">
-                                      <div><span class="text-light-green">Jack William</span> assign you a task</div>
+                                      <div><span class="text-light-green"> </span> assign you a task</div>
                                       <p>1h</p>
                                     </div>
                                   </li>
                                   <li>
                                     <div class="d-flex justify-content-between">
-                                      <div><span class="text-light-green">Leo Lucas</span> assign you a task</div>
+                                      <div><span class="text-light-green"> </span> assign you a task</div>
                                       <p>1h</p>
                                     </div>
                                   </li>
                                   <li>
                                     <div class="d-flex justify-content-between">
-                                      <div><span class="text-light-green">Thomas Henry</span> assign you a task</div>
+                                      <div><span class="text-light-green"> </span> assign you a task</div>
                                       <p>1h</p>
                                     </div>
                                   </li>
                                   <li>
                                     <div class="d-flex justify-content-between">
-                                      <div><span class="text-light-green">Ben Tossell</span> assign you a task</div>
+                                      <div><span class="text-light-green"> </span> assign you a task</div>
                                       <p>1h</p>
                                     </div>
                                   </li>
