--- a/buat baru/admin.html
+++ b/buat baru/admin.html
@@ -33,14 +33,7 @@
                         </a>
                     </li>
 
-                    <li>
-                        <a href="payment.html">
-                            <span class="icon">
-                                <ion-icon name="people-outline"></ion-icon>
-                            </span>
-                            <span class="title">Register Subject</span>
-                        </a>
-                    </li>
+                    
 
                     <li>
                         <a href="class details.html">
@@ -48,6 +41,15 @@
                                 <ion-icon name="chatbubble-outline"></ion-icon>
                             </span>
                             <span class="title">Class Details</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="class details.html">
+                            <span class="icon">
+                                <ion-icon name="chatbubble-outline"></ion-icon>
+                            </span>
+                            <span class="title">User Details</span>
+                            
                         </a>
                     </li>
 
