--- a/buat baru/tutordetails.html
+++ b/buat baru/tutordetails.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Class Details</title>
+        <title>User Details</title>
         <!-- ======= Styles ====== -->
         <link rel="stylesheet" href="assets/css/style.css" />
     </head>
@@ -105,10 +105,10 @@
                             <thead>
                                 <tr>
                                     <td>Name</td>
-                                    <td>Class Subject</td>
-                                    <td>Class Time</td>
-                                    <td>Class Day</td>
-                                    <td>Status</td>
+                                    <td>Phone Number</td>
+                                    <td>Email</td>
+                                    <td>Birthdate</td>
+                                    <td>Address</td>
                                 </tr>
                             </thead>
 
