update layout anchor

--- a/buat baru/registersub.html
+++ b/buat baru/registersub.html
@@ -33,6 +33,15 @@
                     </li>
 
                     <li>
+                        <a href="studentdetails.html">
+                            <span class="icon">
+                                <ion-icon name="home-outline"></ion-icon>
+                            </span>
+                            <span class="title">User Details</span>
+                        </a>
+                    </li>
+
+                    <li>
                         <a href="registersub.html">
                             <span class="icon">
                                 <ion-icon name="people-outline"></ion-icon>
@@ -42,7 +51,7 @@
                     </li>
 
                     <li>
-                        <a href="#">
+                        <a href="classdetails.html">
                             <span class="icon">
                                 <ion-icon name="chatbubble-outline"></ion-icon>
                             </span>
@@ -51,7 +60,7 @@
                     </li>
 
                     <li>
-                        <a href="#">
+                        <a href="feedback.html">
                             <span class="icon">
                                 <ion-icon name="help-outline"></ion-icon>
                             </span>
