--- a/buat baru/feedback.html
+++ b/buat baru/feedback.html
@@ -33,7 +33,7 @@
                     </li>
 
                     <li>
-                        <a href="#">
+                        <a href="studentdetails.html">
                             <span class="icon">
                                 <ion-icon name="home-outline"></ion-icon>
                             </span>
@@ -51,7 +51,7 @@
                     </li>
 
                     <li>
-                        <a href="#">
+                        <a href="classdetails.html">
                             <span class="icon">
                                 <ion-icon name="chatbubble-outline"></ion-icon>
                             </span>
@@ -60,7 +60,7 @@
                     </li>
 
                     <li>
-                        <a href="#">
+                        <a href="feedback.html">
                             <span class="icon">
                                 <ion-icon name="help-outline"></ion-icon>
                             </span>
