--- a/buat baru/student.html
+++ b/buat baru/student.html
@@ -24,7 +24,7 @@
                     </li>
 
                     <li>
-                        <a href="#">
+                        <a href="student.html">
                             <span class="icon">
                                 <ion-icon name="home-outline"></ion-icon>
                             </span>
@@ -33,7 +33,7 @@
                     </li>
 
                     <li>
-                        <a href="#">
+                        <a href="studentdetails.html">
                             <span class="icon">
                                 <ion-icon name="home-outline"></ion-icon>
                             </span>
@@ -42,7 +42,7 @@
                     </li>
 
                     <li>
-                        <a href="#">
+                        <a href="registersub.html">
                             <span class="icon">
                                 <ion-icon name="people-outline"></ion-icon>
                             </span>
@@ -51,7 +51,7 @@
                     </li>
 
                     <li>
-                        <a href="#">
+                        <a href="classdetails.html">
                             <span class="icon">
                                 <ion-icon name="chatbubble-outline"></ion-icon>
                             </span>
