--- a/buat baru/student.html
+++ b/buat baru/student.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Student</title>
+        <title>Responsive Admin Dashboard | Korsat X Parmaga</title>
         <!-- ======= Styles ====== -->
         <link rel="stylesheet" href="assets/css/style.css" />
     </head>
@@ -93,7 +93,56 @@
                         </label>
                     </div>
 
-                    <div class="user"></div>
+                    <div class="user">
+                        <img src="assets/imgs/customer01.jpg" alt="" />
+                    </div>
+                </div>
+
+                <!-- ======================= Cards ================== -->
+                <div class="cardBox">
+                    <div class="card">
+                        <div>
+                            <div class="numbers">1,504</div>
+                            <div class="cardName">Daily Views</div>
+                        </div>
+
+                        <div class="iconBx">
+                            <ion-icon name="eye-outline"></ion-icon>
+                        </div>
+                    </div>
+
+                    <div class="card">
+                        <div>
+                            <div class="numbers">80</div>
+                            <div class="cardName">Sales</div>
+                        </div>
+
+                        <div class="iconBx">
+                            <ion-icon name="cart-outline"></ion-icon>
+                        </div>
+                    </div>
+
+                    <div class="card">
+                        <div>
+                            <div class="numbers">284</div>
+                            <div class="cardName">Comments</div>
+                        </div>
+
+                        <div class="iconBx">
+                            <ion-icon name="chatbubbles-outline"></ion-icon>
+                        </div>
+                    </div>
+
+                    <div class="card">
+                        <div>
+                            <div class="numbers">$7,842</div>
+                            <div class="cardName">Earning</div>
+                        </div>
+
+                        <div class="iconBx">
+                            <ion-icon name="cash-outline"></ion-icon>
+                        </div>
+                    </div>
                 </div>
 
                 <!-- ================ Order Details List ================= -->
@@ -203,6 +252,151 @@
                                     </td>
                                 </tr>
                             </tbody>
+                        </table>
+                    </div>
+
+                    <!-- ================= New Customers ================ -->
+                    <div class="recentCustomers">
+                        <div class="cardHeader">
+                            <h2>Recent Customers</h2>
+                        </div>
+
+                        <table>
+                            <tr>
+                                <td width="60px">
+                                    <div class="imgBx">
+                                        <img
+                                            src="assets/imgs/customer02.jpg"
+                                            alt=""
+                                        />
+                                    </div>
+                                </td>
+                                <td>
+                                    <h4>
+                                        David <br />
+                                        <span>Italy</span>
+                                    </h4>
+                                </td>
+                            </tr>
+
+                            <tr>
+                                <td width="60px">
+                                    <div class="imgBx">
+                                        <img
+                                            src="assets/imgs/customer01.jpg"
+                                            alt=""
+                                        />
+                                    </div>
+                                </td>
+                                <td>
+                                    <h4>
+                                        Amit <br />
+                                        <span>India</span>
+                                    </h4>
+                                </td>
+                            </tr>
+
+                            <tr>
+                                <td width="60px">
+                                    <div class="imgBx">
+                                        <img
+                                            src="assets/imgs/customer02.jpg"
+                                            alt=""
+                                        />
+                                    </div>
+                                </td>
+                                <td>
+                                    <h4>
+                                        David <br />
+                                        <span>Italy</span>
+                                    </h4>
+                                </td>
+                            </tr>
+
+                            <tr>
+                                <td width="60px">
+                                    <div class="imgBx">
+                                        <img
+                                            src="assets/imgs/customer01.jpg"
+                                            alt=""
+                                        />
+                                    </div>
+                                </td>
+                                <td>
+                                    <h4>
+                                        Amit <br />
+                                        <span>India</span>
+                                    </h4>
+                                </td>
+                            </tr>
+
+                            <tr>
+                                <td width="60px">
+                                    <div class="imgBx">
+                                        <img
+                                            src="assets/imgs/customer02.jpg"
+                                            alt=""
+                                        />
+                                    </div>
+                                </td>
+                                <td>
+                                    <h4>
+                                        David <br />
+                                        <span>Italy</span>
+                                    </h4>
+                                </td>
+                            </tr>
+
+                            <tr>
+                                <td width="60px">
+                                    <div class="imgBx">
+                                        <img
+                                            src="assets/imgs/customer01.jpg"
+                                            alt=""
+                                        />
+                                    </div>
+                                </td>
+                                <td>
+                                    <h4>
+                                        Amit <br />
+                                        <span>India</span>
+                                    </h4>
+                                </td>
+                            </tr>
+
+                            <tr>
+                                <td width="60px">
+                                    <div class="imgBx">
+                                        <img
+                                            src="assets/imgs/customer01.jpg"
+                                            alt=""
+                                        />
+                                    </div>
+                                </td>
+                                <td>
+                                    <h4>
+                                        David <br />
+                                        <span>Italy</span>
+                                    </h4>
+                                </td>
+                            </tr>
+
+                            <tr>
+                                <td width="60px">
+                                    <div class="imgBx">
+                                        <img
+                                            src="assets/imgs/customer02.jpg"
+                                            alt=""
+                                        />
+                                    </div>
+                                </td>
+                                <td>
+                                    <h4>
+                                        Amit <br />
+                                        <span>India</span>
+                                    </h4>
+                                </td>
+                            </tr>
                         </table>
                     </div>
                 </div>
